# arm.rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yaml
nix/: default.nix  module.nix
src/: config.rs  devices.rs  main.rs
src/config/: arm_options.rs  dir_options.rs  ext_options.rs  mod.rs  notification_options.rs
src/media/: data.rs  mod.rs  video.rs
