[package]
name = "arm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
udev = "0.6.3"
toml = "0.5.9"
log = "0.4.17"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dependencies.serde]
version = "1.0.37"
features = ["derive"]

[dependencies.mio]
version = "0.8.3"
features = ["os-ext"]
